# WaveLet-Lab-Devolution-x-Lite

./: .env.example  .gitignore  DEPLOYMENT.md  LICENSE  Makefile  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml
backend/: Dockerfile  pyproject.toml  requirements.txt  setup.py
backend/scripts/: benchmark_holoscan.py  run_server.py  run_socketio_server.py  setup_environment.sh  start_backend.sh  test_frontend_endpoints.sh  test_native_usdr.py  test_ring_buffer_usdr.py  test_usdr_pipeline.py  verify_environment.py
backend/src/rf_forensics/: __init__.py  __main__.py
backend/src/rf_forensics/api/: __init__.py  dependencies.py  frontend_adapter.py  pipeline_integration.py  rest_api.py  socketio_server.py  validators.py  websocket_binary.py  websocket_server.py  websocket_unified.py
backend/src/rf_forensics/api/routers/: __init__.py  analysis.py  config.py  detections.py  recordings.py  sdr.py  system.py
backend/src/rf_forensics/api/schemas/: __init__.py  backend.py  frontend.py
backend/src/rf_forensics/backend/models/: capture_descriptor.py
backend/src/rf_forensics/backend/routers/: analyze.py
backend/src/rf_forensics/backend/utils/: auto_detect.py  dsp_core.py  file_storage.py  format_handlers.py
backend/src/rf_forensics/config/: __init__.py  defaults.py  schema.py
backend/src/rf_forensics/core/: __init__.py  async_transfer.py  gpu_compat.py  logging_config.py  memory_manager.py  profiling.py  ring_buffer.py  stream_manager.py  types.py
backend/src/rf_forensics/demod/: __init__.py  ble.py  linear.py  lora.py
backend/src/rf_forensics/detection/: __init__.py  cfar.py  peaks.py
backend/src/rf_forensics/dsp/: __init__.py  frequency.py  psd.py  windows.py
backend/src/rf_forensics/forensics/: __init__.py  cumulants.py  cyclostationary.py  recording_manager.py  symbol_rate.py
backend/src/rf_forensics/ml/: __init__.py  clustering.py  features.py
backend/src/rf_forensics/ml/anomaly/: __init__.py  autoencoder.py  inference.py
backend/src/rf_forensics/pipeline/: __init__.py  orchestrator.py
backend/src/rf_forensics/profiling/: __init__.py  backpressure_test.py  benchmarks.py  gpu_metrics.py  nvtx_markers.py
backend/src/rf_forensics/sdr/: ARCHITECTURE.md  __init__.py  interface.py  manager.py  metrics.py  usdr_driver.py
backend/tests/: conftest.py  engineering_benchmark.py
backend/tests/integration/: __init__.py  test_api_workflows.py  test_file_io.py  test_frontend_contract.py  test_storage.py
backend/tests/unit/: test_cfar.py  test_psd.py
config/: defaults.yaml
docs/: ARCHITECTURE_AND_SOLUTIONS.md  BACKEND_API_SPEC.md  BACKEND_CONTRACT.md  BACKEND_INTEGRATION_SPEC.md  ENGINEERING_BENCHMARK_REPORT.json  ENGINEERING_BENCHMARK_REPORT.md  FRONTEND_DASHBOARD_METRICS.md  FRONTEND_IMPLEMENTATION_GUIDE.md  HOLOSCAN_ISSUES.md  HOLOSCAN_OPTIMIZATION_CHECKLIST.md  MERGE_READY_SUMMARY.md  Python Backend Deployment Guide.md  Python Backend Integration Summary.md  SPRINT7_PORT8765_FIX.md  USDR_DEVBOARD_API.md  Valentine RF - Python Backend.md  backend_best_practices.md  gpudirect_usdr_primer.md
frontend/: Dockerfile  Dockerfile.dev  FRONTEND_TOPOLOGY.md  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts  vitest.config.ts
frontend/shared/: const.ts
frontend/src/: App.tsx  const.ts  index.css  main.tsx
frontend/src/__tests__/: api-contract.test.ts  type-conversion.test.ts  websocket-contract.test.ts
frontend/src/components/: KeyboardShortcutsHelp.tsx
frontend/src/components/alerts/: ThresholdAlertsDialog.tsx  ViolationHistoryDialog.tsx
frontend/src/components/bookmarks/: BookmarkDialog.tsx
frontend/src/components/clusters/: ClusterView.tsx
frontend/src/components/controls/: AdvancedSDRDialog.tsx  BandSelectionDialog.tsx  LiveControlBar.tsx  RecordingControls.tsx  SDRControlPanel.tsx  SDRMetricsBar.tsx  UnifiedSDRPanel.tsx
frontend/src/components/demod/: BLEDecoder.tsx  DecoderPanel.tsx  LoRaDecoder.tsx
frontend/src/components/detections/: DetectionList.tsx
frontend/src/components/file-manager/: FileManager.tsx
frontend/src/components/gpu/: GPUMetricsPanel.tsx  index.ts
frontend/src/components/layout/: DashboardLayout.tsx
frontend/src/components/ml/: MLClassificationDashboard.tsx  index.ts
frontend/src/components/monitoring/: DetectionTimeline.tsx  RSSIMeter.tsx
frontend/src/components/performance/: PerformanceDashboard.tsx  PerformanceProfiler.tsx
frontend/src/components/reports/: ReportGenerator.tsx
frontend/src/components/spectrum/: AdaptiveSpectrumDisplay.tsx  CanvasSpectrumRenderer.tsx  CanvasWaterfallRenderer.tsx  DetectionOverlay.tsx  (+13 more)
frontend/src/hooks/: useKeyboardShortcuts.ts  useSDR.ts  useThresholdMonitor.ts  useWebSocket.ts
frontend/src/pages/: Analyze.tsx  Bookmarks.tsx  History.tsx  Home.tsx  Live.tsx  LiveMonitoring.tsx
frontend/src/services/: websocket.ts
frontend/src/shaders/: spectrum.wgsl  waterfall.wgsl
frontend/src/stores/: bookmarkStore.ts  clusterStore.ts  configStore.ts  detectionStore.ts  spectrumStore.ts  thresholdStore.ts  uiStore.ts  violationLogStore.ts
frontend/src/types/: api.ts  cluster.ts  demod.ts  detection.ts  display.ts  index.ts  preset.ts  sdr.ts  visualization.ts  websocket.ts
frontend/src/utils/: colormaps.ts  webgpu.ts
frontend/src/workers/: spectrum.worker.ts
holoscan/: CMakeLists.txt  Dockerfile  build.sh  docker-compose.holoscan.yml  rf_forensics.yaml
holoscan/python/: __init__.py  bindings.cpp  native_pipeline.py
holoscan/src/app/: rf_forensics_app.cpp
holoscan/src/kernels/: cfar_kernels.cu  cfar_kernels.cuh  psd_kernels.cu  psd_kernels.cuh
holoscan/src/operators/: cfar_op.cpp  cfar_op.hpp  peak_op.cpp  peak_op.hpp  psd_op.cpp  psd_op.hpp  usdr_source_op.cpp  usdr_source_op.hpp
(+1 files in other folders)
